--- a/index.html
+++ b/index.html
@@ -633,7 +633,7 @@
     
   </div> -->
 
-  <div id="preloader"></div>
+    <!--  <div id="preloader"></div> -->
 
   <script src = "assets/vendor/collection.js"></script>
   <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
