--- a/index.html
+++ b/index.html
@@ -588,7 +588,6 @@
           <ul>
             <li><i class="bi bi-chevron-right"></i> <a href="#">Home</a></li>
             <li><i class="bi bi-chevron-right"></i> <a href="#">Blog</a></li>
-            <li><i class="bi bi-chevron-right"></i> <a href="#">News</a></li>
             <li><i class="bi bi-chevron-right"></i> <a href="./services/Contact.html">Contact Us</a></li>
             <li><i class="bi bi-chevron-right"></i> <a href="#">Privacy policy</a></li>
             
@@ -629,11 +628,9 @@
   <!-- <div id="preloader">
    
       <img src="assets/img/logo.png" alt="Logo" id="preloader-logo">
-   
-    
   </div> -->
 
-  <div id="preloader"></div>
+  <!-- <div id="preloader"></div> -->
 
   <script src = "assets/vendor/collection.js"></script>
   <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
