--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
        
           <div class= "about section text-center">
             <h2>About Awddel Holdings</h2>
-            <p>Awddel Holdings is a diversified business group with a strong presence in automobiles, aviation, hospitality, telecom, retail, and finance. With over 40 years of growth, we drive innovation and create lasting value across the SAARC and Asian regions.</p></div>
+            <p>Awddel Holdings is a diversified business group with a strong presence in Automobiles, Aviation, Hospitality, Telecom, Retail, and Finance. With over 40 years of growth, we drive innovation and create lasting value across the SAARC and Asian regions.</p></div>
         
       </div>
     </section>
@@ -165,7 +165,6 @@
           <img src="assets/img/partners/MDSTECH.webp" class="img-fluid" alt="MDSTECH" loading="lazy" width="auto" height="auto">
           <img src="assets/img/partners/dacta.webp" class="img-fluid" alt="dacta" loading="lazy" width="auto" height="auto">
           <img src="assets/img/partners/scanna.webp" class="img-fluid" alt="scanna" loading="lazy" width="auto" height="auto">
-          <img src="assets/img/partners/uphilos.webp" class="img-fluid" alt="uphilos" loading="lazy" width="auto" height="auto">
           <img src="assets/img/partners/uplusit.webp" class="img-fluid" alt="uplusit" loading="lazy" width="auto" height="auto">
           <img src="assets/img/partners/LSCable.webp" class="img-fluid" alt="LSCable" loading="lazy" width="auto" height="auto">
           <img src="assets/img/partners/nisko_pinnacle_logo.webp" class="img-fluid" alt="nisko_pinnacle_logo" loading="lazy" width="auto" height="auto">
@@ -178,7 +177,6 @@
           <img src="assets/img/partners/MDSTECH.webp" class="img-fluid" alt="MDSTECH" loading="lazy" width="auto" height="auto">
           <img src="assets/img/partners/dacta.webp" class="img-fluid" alt="dacta" loading="lazy" width="auto" height="auto">
           <img src="assets/img/partners/scanna.webp" class="img-fluid" alt="scanna" loading="lazy" width="auto" height="auto">
-          <img src="assets/img/partners/uphilos.webp" class="img-fluid" alt="uphilos" loading="lazy" width="auto" height="auto">
           <img src="assets/img/partners/uplusit.webp" class="img-fluid" alt="uplusit" loading="lazy" width="auto" height="auto">
           <img src="assets/img/partners/LSCable.webp" class="img-fluid" alt="LSCable" loading="lazy" width="auto" height="auto">
           <img src="assets/img/partners/nisko_pinnacle_logo.webp" class="img-fluid" alt="nisko_pinnacle_logo" loading="lazy" width="auto" height="auto">
