--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
           <div class="swiper-slide img4">
           </div>
 
-          <div class="swiper-slide img5">
+          <div class="swiper-slide okay">
           </div>
           
         </div>
