--- a/portfoilio/Consultancy.html
+++ b/portfoilio/Consultancy.html
@@ -162,8 +162,8 @@
             <img src="../assets/img/awddel.png" width="180px" height="100px" alt="logo">
           </a>
           <div class="footer-contact pt-3">
-            <p>Lamtangeen Marg & 14</p>
-            <p>Baluwatar Kathmandu, Nepal</p>
+            <p>Ichangu Galli</p>
+            <p>Nagarjun, Kathmandu, Nepal</p>
             <p class="mt-3"><strong>Phone:</strong> <span>977 01-4526821/4528947</span></p>
             <p><strong>Email:</strong> <span>info@awddel.com</span></p>
           </div>
@@ -177,24 +177,23 @@
         <div class="col-lg-4 col-md-6 footer-links">
           <h4>Useful Links</h4>
           <ul>
-            <li><i class="bi bi-chevron-right"></i> <a href="#">Home</a></li>
+            <li><i class="bi bi-chevron-right"></i> <a href="../index.html">Home</a></li>
             <li><i class="bi bi-chevron-right"></i> <a href="#">Blog</a></li>
             <li><i class="bi bi-chevron-right"></i> <a href="#">News</a></li>
             <li><i class="bi bi-chevron-right"></i> <a href="../services/Contact.html">Contact Us</a></li>
             <li><i class="bi bi-chevron-right"></i> <a href="#">Privacy policy</a></li>
-            
           </ul>
         </div>
 
         <div class="col-lg-4 col-md-6 footer-links">
           <h4>Our Portfolio</h4>
           <ul>
-            <li><i class="bi bi-chevron-right"></i> <a href="./Hospitality.html">Hospitality & Tourism</a></li>
-            <li><i class="bi bi-chevron-right"></i> <a href="./Telecom.html">Telecommunication & Security</a></li>
-            <li><i class="bi bi-chevron-right"></i> <a href="./power.html">Power Sector</a></li>
-            <li><i class="bi bi-chevron-right"></i> <a href="./IT.html">IT Sector</a></li>
-            <li><i class="bi bi-chevron-right"></i> <a href="./Consultancy.html">Project & Consultancy</a></li>
-          </ul>
+            <li><i class="bi bi-chevron-right"></i> <a href="../portfoilio/Hospitality.html">Hospitality & Tourism</a></li>
+            <li><i class="bi bi-chevron-right"></i> <a href="../portfoilio/Telecom.html">Telecommunication & Security</a></li>
+            <li><i class="bi bi-chevron-right"></i> <a href="../portfoilio/power.html">Power Sector</a></li>
+            <li><i class="bi bi-chevron-right"></i> <a href="../portfoilio/IT.html">IT Sector</a></li>
+            <li><i class="bi bi-chevron-right"></i> <a href="../portfoilio/Consultancy.html">Project & Consultancy</a></li>
+           </ul>
         </div>
 
       </div>
@@ -220,10 +219,4 @@
   <script src="../assets/js/main.js"></script>
 
 </body>
-
 </html>
-
-
-
-
-
