--- a/portfoilio/aviation.html
+++ b/portfoilio/aviation.html
@@ -122,8 +122,8 @@
             <img src="../assets/img/awddel.png" width="180px" height="100px" alt="logo">
           </a>
           <div class="footer-contact pt-3">
-            <p>Lamtangeen Marg & 14</p>
-            <p>Baluwatar Kathmandu, Nepal</p>
+            <p>Ichangu Galli</p>
+            <p>Nagarjun, Kathmandu, Nepal</p>
             <p class="mt-3"><strong>Phone:</strong> <span>977 01-4526821/4528947</span></p>
             <p><strong>Email:</strong> <span>info@awddel.com</span></p>
           </div>
@@ -139,6 +139,7 @@
           <ul>
             <li><i class="bi bi-chevron-right"></i> <a href="../index.html">Home</a></li>
             <li><i class="bi bi-chevron-right"></i> <a href="#">Blog</a></li>
+            <li><i class="bi bi-chevron-right"></i> <a href="#">News</a></li>
             <li><i class="bi bi-chevron-right"></i> <a href="../services/Contact.html">Contact Us</a></li>
             <li><i class="bi bi-chevron-right"></i> <a href="#">Privacy policy</a></li>
           </ul>
@@ -178,5 +179,4 @@
   <script src="../assets/js/main.js"></script>
 
 </body>
-
 </html>
