--- a/services/Automobiles.html
+++ b/services/Automobiles.html
@@ -126,8 +126,8 @@
             <img src="../assets/img/awddel.png" width="180px" height="100px" alt="logo">
           </a>
           <div class="footer-contact pt-3">
-            <p>Lamtangeen Marg & 14</p>
-            <p>Baluwatar Kathmandu, Nepal</p>
+            <p>Ichangu Galli</p>
+            <p>Nagarjun, Kathmandu, Nepal</p>
             <p class="mt-3"><strong>Phone:</strong> <span>977 01-4526821/4528947</span></p>
             <p><strong>Email:</strong> <span>info@awddel.com</span></p>
           </div>
