--- a/services/Contact.html
+++ b/services/Contact.html
@@ -116,71 +116,70 @@
   </script>
 
 
-  <footer id="footer" class="footer dark-background">
+<footer id="footer" class="footer dark-background">
 
-    <div class="container footer-top">
-      <div class="row gy-4">
-        <div class="col-lg-4 col-md-6 footer-about">
-          <a href="../index.html" class="logo d-flex align-items-center">
-            <img src="../assets/img/awddel.png" width="180px" height="100px" alt="logo">
-          </a>
-          <div class="footer-contact pt-3">
-            <p>Lamtangeen Marg & 14</p>
-            <p>Baluwatar Kathmandu, Nepal</p>
-            <p class="mt-3"><strong>Phone:</strong> <span>977 01-4526821/4528947</span></p>
-            <p><strong>Email:</strong> <span>info@awddel.com</span></p>
-          </div>
-          <div class="social-links d-flex mt-4">
-            <a href=""><i class="bi bi-facebook"></i></a>
-            <a href=""><i class="bi bi-instagram"></i></a>
-            <a href=""><i class="bi bi-linkedin"></i></a>
-          </div>
+  <div class="container footer-top">
+    <div class="row gy-4">
+      <div class="col-lg-4 col-md-6 footer-about">
+        <a href="../index.html" class="logo d-flex align-items-center">
+          <img src="../assets/img/awddel.png" width="180px" height="100px" alt="logo">
+        </a>
+        <div class="footer-contact pt-3">
+          <p>Ichangu Galli</p>
+          <p>Nagarjun, Kathmandu, Nepal</p>
+          <p class="mt-3"><strong>Phone:</strong> <span>977 01-4526821/4528947</span></p>
+          <p><strong>Email:</strong> <span>info@awddel.com</span></p>
         </div>
-
-        <div class="col-lg-4 col-md-6 footer-links">
-          <h4>Useful Links</h4>
-          <ul>
-            <li><i class="bi bi-chevron-right"></i> <a href="../index.html">Home</a></li>
-            <li><i class="bi bi-chevron-right"></i> <a href="#">Blog</a></li>
-            <li><i class="bi bi-chevron-right"></i> <a href="#">News</a></li>
-            <li><i class="bi bi-chevron-right"></i> <a href="./Contact.html">Contact Us</a></li>
-            <li><i class="bi bi-chevron-right"></i> <a href="#">Privacy policy</a></li>
-          </ul>
+        <div class="social-links d-flex mt-4">
+          <a href=""><i class="bi bi-facebook"></i></a>
+          <a href=""><i class="bi bi-instagram"></i></a>
+          <a href=""><i class="bi bi-linkedin"></i></a>
         </div>
-
-        <div class="col-lg-4 col-md-6 footer-links">
-          <h4>Our Portfolio</h4>
-          <ul>
-            <li><i class="bi bi-chevron-right"></i> <a href="./Hospitality.html">Hospitality & Tourism</a></li>
-            <li><i class="bi bi-chevron-right"></i> <a href="./Telecom.html">Telecommunication & Security</a></li>
-            <li><i class="bi bi-chevron-right"></i> <a href="./power.html">Power Sector</a></li>
-            <li><i class="bi bi-chevron-right"></i> <a href="./IT.html">IT Sector</a></li>
-            <li><i class="bi bi-chevron-right"></i> <a href="./Consultancy.html">Project & Consultancy</a></li>
-          </ul>
-        </div>
-
       </div>
+
+      <div class="col-lg-4 col-md-6 footer-links">
+        <h4>Useful Links</h4>
+        <ul>
+          <li><i class="bi bi-chevron-right"></i> <a href="../index.html">Home</a></li>
+          <li><i class="bi bi-chevron-right"></i> <a href="#">Blog</a></li>
+          <li><i class="bi bi-chevron-right"></i> <a href="#">News</a></li>
+          <li><i class="bi bi-chevron-right"></i> <a href="../services/Contact.html">Contact Us</a></li>
+          <li><i class="bi bi-chevron-right"></i> <a href="#">Privacy policy</a></li>
+        </ul>
+      </div>
+
+      <div class="col-lg-4 col-md-6 footer-links">
+        <h4>Our Portfolio</h4>
+        <ul>
+          <li><i class="bi bi-chevron-right"></i> <a href="../portfoilio/Hospitality.html">Hospitality & Tourism</a></li>
+          <li><i class="bi bi-chevron-right"></i> <a href="../portfoilio/Telecom.html">Telecommunication & Security</a></li>
+          <li><i class="bi bi-chevron-right"></i> <a href="../portfoilio/power.html">Power Sector</a></li>
+          <li><i class="bi bi-chevron-right"></i> <a href="../portfoilio/IT.html">IT Sector</a></li>
+          <li><i class="bi bi-chevron-right"></i> <a href="../portfoilio/Consultancy.html">Project & Consultancy</a></li>
+         </ul>
+      </div>
+
     </div>
+  </div>
 
-    <div class="container copyright text-center mt-4">
-      <script>
-        window.onload = function() {
-          var now = new Date();
-          var year = now.getFullYear();
-          document.getElementById("date").innerHTML = year;
-        };
-      </script>
-      
-      <p>Copyright <span>© <span id="date"></span></span> <strong class="px-1 sitename">Awddel Holdings.</strong> <span>All Rights Reserved</span></p>
-    </div>
+  <div class="container copyright text-center mt-4">
+    <script>
+      window.onload = function() {
+        var now = new Date();
+        var year = now.getFullYear();
+        document.getElementById("date").innerHTML = year;
+      };
+    </script>
+    
+    <p>Copyright <span>© <span id="date"></span></span> <strong class="px-1 sitename">Awddel Holdings.</strong> <span>All Rights Reserved</span></p>
+  </div>
 
-  </footer>
-  <a href="#" id="scroll-top" class="scroll-top d-flex align-items-center justify-content-center"><i class="bi bi-arrow-up-short"></i></a>
-  <div id="preloader"></div>
+</footer>
+<a href="#" id="scroll-top" class="scroll-top d-flex align-items-center justify-content-center"><i class="bi bi-arrow-up-short"></i></a>
+<div id="preloader"></div>
 
-  <script src="../assets/vendor/collection.js"></script>
-  <script src="../assets/js/main.js"></script>
+<script src="../assets/vendor/collection.js"></script>
+<script src="../assets/js/main.js"></script>
 
 </body>
-
 </html>
