--- a/portfoilio/auto.html
+++ b/portfoilio/auto.html
@@ -125,8 +125,9 @@
             <img src="../assets/img/awddel.png" width="180px" height="100px" alt="logo">
           </a>
           <div class="footer-contact pt-3">
-            <p>Ichangu Galli</p>
-            <p>Nagarjun, Kathmandu, Nepal</p>
+            <p>Awddel Inter Pvt. Ltd.</p>
+            <p>Ichangu Galli, Nagarjun,</p>
+            <p>Kathmandu, Nepal</p>
             <p class="mt-3"><strong>Phone:</strong> <span>977 01-4526821/4528947</span></p>
             <p><strong>Email:</strong> <span>info@awddel.com</span></p>
           </div>
